[package]
name = "query-group"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.64", features = ["full", "visit-mut"] }
synstructure = "0.13.1"
salsa = { git = "https://github.com/salsa-rs/salsa.git" }

[dev-dependencies]
expect-test = "1.5.0"
